[gd_scene load_steps=7 format=3]

[ext_resource type="Script" path="res://src/scenes/Results.gd" id=1]
[ext_resource type="PackedScene" path="res://src/visual/BackgroundController.tscn" id=2]
[ext_resource type="Script" path="res://src/ui/GlassPanel.gd" id=3]
[ext_resource type="Theme" path="res://src/ui/UiTheme.tres" id=4]
[ext_resource type="Script" path="res://src/ui/LiquidGlassButton.gd" id=5]

[node name="Results" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
theme = ExtResource( 4 )

[node name="BackgroundController" parent="." instance=ExtResource( 2 )]

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="ColorRect" parent="UI"]
script = ExtResource( 3 )
anchor_left = 0.1
anchor_top = 0.2
anchor_right = 0.9
anchor_bottom = 0.8
blur_radius = 5.6
tint = Color(0.08, 0.14, 0.27, 0.38)
edge = Color(0.93, 0.97, 1, 0.26)
corner_radius = 0.11
edge_width = 1.05
warp_intensity = 0.1
chromatic_strength = 0.2
color = Color(0.08, 0.14, 0.27, 0.38)

[node name="PanelBloom" type="ColorRect" parent="UI"]
script = ExtResource( 3 )
anchor_left = 0.08
anchor_top = 0.18
anchor_right = 0.92
anchor_bottom = 0.82
blur_radius = 7.0
tint = Color(0.64, 0.78, 1, 0.1)
edge = Color(0.8, 0.9, 1, 0.1)
corner_radius = 0.13
edge_width = 1.0
warp_intensity = 0.06
chromatic_strength = 0.04
color = Color(0.64, 0.78, 1, 0.1)

[node name="VBox" type="VBoxContainer" parent="UI"]
anchor_left = 0.14
anchor_top = 0.25
anchor_right = 0.86
anchor_bottom = 0.75
alignment = 1
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="UI/VBox"]
text = "Color Crunch"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 54

[node name="Score" type="Label" parent="UI/VBox"]
text = "Score: 0"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 84

[node name="Best" type="Label" parent="UI/VBox"]
text = "Best: 0"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 30

[node name="Streak" type="Label" parent="UI/VBox"]
text = "Streak: 0"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 30

[node name="PlayAgain" type="Button" parent="UI/VBox"]
script = ExtResource( 5 )
text = "Play Again"
custom_minimum_size = Vector2(0, 124)
tint = Color(0.72, 0.84, 1, 0.34)
edge_highlight = Color(0.96, 0.99, 1, 0.72)
blur = 3.3

[node name="Menu" type="Button" parent="UI/VBox"]
script = ExtResource( 5 )
text = "Main Menu"
custom_minimum_size = Vector2(0, 106)

[connection signal="pressed" from="UI/VBox/PlayAgain" to="." method="_on_play_again_pressed"]
[connection signal="pressed" from="UI/VBox/Menu" to="." method="_on_menu_pressed"]

